k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-exercise
spec:
  replicas: 3
  selector:
    matchLabels:
      app: matrix-exercise
  template:
    metadata:
      labels:
        app: matrix-exercise
    spec:
      containers:
      - name: matrix-exercise
        image: steveregev/matrix-exercise:18
        ports:
        - containerPort: 80
