k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: demo
spec:
  type: NodePort
  selector:
    app: matrix-exercise
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30303
